dev/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  # namespace: demo-app
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          # Your workflow will overwrite this with the new ECR tag
          image: 767398149585.dkr.ecr.us-east-1.amazonaws.com/docker-repo:07057cb
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  #namespace: demo-app-updated
  labels:
    app: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - name: http
      port: 80
      targetPort: 80
  template:
    spec:
      containers: []
